@@ -4,6 +4,8 @@
 2. Fix renmaming and deleting favourites.
 3. Use curent cover as queue background.
 4. Use curent artist, album, etc. image as browse background.
+5. When adding/playing a selection, call commands sequentially and wait for
+   each to complete before doing the next.
 
 0.2.1
 -----
